update confusing "add 5 to a set" example

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </section>
 
 <section class="slide">
-  <p>Likewise, adding 5 to the set of even integers has no effect on either value</p>
+  <p>Likewise, adding the sets <span class="nowrap">{1, 2, 3}</span> and <span class="nowrap">{2, 4, 6}</span> has no effect on either value</p>
 </section>
 
 <section class="slide">
